--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="row">
     <div class="col-6 text-center">
       <p>Vremenske novosti</p>
-      <iframe src="//rss.bloople.net/?url=https%3A%2F%2Fpolitepol.com%2Ffd%2FVH9N1hzwzkiQ.xml&detail=30&limit=10&showicon=true&type=html"></iframe>
+      <iframe style="height: 300px;" src="//rss.bloople.net/?url=https%3A%2F%2Fpolitepol.com%2Ffd%2FVH9N1hzwzkiQ.xml&detail=30&limit=10&showicon=true&type=html"></iframe>
     </div>
     <div class="col-6 text-center"><p>Mjerilo vremenske postaje</p>
-    <iframe src="http://192.168.1.109/"></iframe>
+    <iframe style="height: 300px;" src="http://192.168.1.109/"></iframe>
     </div>
     </div>
 
