--- a/o_projektu.html
+++ b/o_projektu.html
@@ -11,10 +11,10 @@
     <nav class="navbar navbar-expand-sm" style="background-color: #A5A7B1;">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">O Vremenu i Mjerenju Vremena</a>
+            <a class="navbar-brand" href="index.html">O Vremenu i Mjerenju Vremena</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Početna</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Početna</a></li>
             <li><a class="nav-link" href="o_projektu.html">O projektu</a></li>
           </ul>
         </div>
@@ -28,7 +28,80 @@
         </div>
         <div class="row">
             <p>Programski kod za rad ove vremenske postaje pisan je u Arduinu, a za ispravan rad BME280 senzora korištena je <a class="link-opacity-50-hover" href="https://github.com/adafruit/Adafruit_Sensor">AdaFruit Unified Sensor</a> biblioteka.</p>
+            Izvadak koda iz biblioteke koji prikazuje kako se ispisuju senzorska očitanja:
         </div>
+      </div>
+      <div class="row">
+        <pre class="language-c" style="max-height: 40em; margin-bottom: 20px;">
+          <code class="language-c">
+              void displaySensorDetails(void)
+              {
+                sensor_t sensor;
+                accel.getSensor(&sensor);
+                Serial.println("------------------------------------");
+                Serial.print  ("Sensor:       "); Serial.println(sensor.name);
+                Serial.print  ("Driver Ver:   "); Serial.println(sensor.version);
+                Serial.print  ("Unique ID:    "); Serial.println(sensor.sensor_id);
+                Serial.print  ("Max Value:    "); Serial.print(sensor.max_value); Serial.println(" m/s^2");
+                Serial.print  ("Min Value:    "); Serial.print(sensor.min_value); Serial.println(" m/s^2");
+                Serial.print  ("Resolution:   "); Serial.print(sensor.resolution); Serial.println(" m/s^2");
+                Serial.println("------------------------------------");
+                Serial.println("");
+                delay(500);
+              }
+          </code>
+        </pre>
+      </div>
+      <div class="row">
+          <p>Očitani senzorski podaci se prikazuju u stvarnom vremenu na web serveru hostanom na mikrokontroleru, vidljivo na početnoj stranici. Očitavanja su prikazana u jednostavnoj HTML tablici:</p>
+        <pre class="language-html">
+          <code class="language-html">
+              &lt;table&gt;
+            &lt;tr&gt;
+              &lt;th&gt;MEASUREMENT&lt;/th&gt;
+              &lt;th&gt;VALUE&lt;/th&gt;
+            &lt;/tr&gt;
+            &lt;tr&gt;
+              &lt;td&gt;Temp. Celsius&lt;/td&gt;
+              &lt;td&gt;--- *C&lt;/td&gt;
+            &lt;/tr&gt;
+            &lt;tr&gt;
+              &lt;td&gt;Temp. Fahrenheit&lt;/td&gt;
+              &lt;td&gt;--- *F&lt;/td&gt;
+            &lt;/tr&gt;
+            &lt;tr&gt;
+              &lt;td&gt;Pressure&lt;/td&gt;
+              &lt;td&gt;--- hPa&lt;/td&gt;
+            &lt;/tr&gt;
+            &lt;tr&gt;
+              &lt;td&gt;Approx. Altitude&lt;/td&gt;
+              &lt;td&gt;--- meters&lt;/td&gt;&lt;/tr&gt;
+            &lt;tr&gt;
+              &lt;td&gt;Humidity&lt;/td&gt;
+              &lt;td&gt;--- %&lt;/td&gt;
+            &lt;/tr&gt;
+          &lt;/table&gt;
+          </code>
+        </pre>
+      </div>
+      <div class="row">
+        <p>RSS feed, koji se nalazi pokraj prikaza vremenske postaje na početnoj stranici, se sastoji od XML koda koji prikazuje pretpregled svakog članka sa liste. Primjer XML koda za jedan takav izvadak:</p>
+        <pre class="language-xml">
+          <code class="language-xml">
+            &lt;item&gt;
+            &lt;title&gt;Große Lawinengefahr in den Alpen&lt;/title&gt;
+            &lt;link&gt;
+            https://www.wetteronline.at/wetterticker/neuschnee-und-wind-grosse-lawinengefahr-in-den-alpen--a2c479f3-038e-48d8-b527-ec401fae949e
+            &lt;/link&gt;
+            &lt;description&gt;Vorsicht in den Bergen&lt;/description&gt;
+            &lt;pubDate&gt;Wed, 29 Jan 2025 08:20:41 -0000&lt;/pubDate&gt;
+            &lt;guid isPermaLink="false"&gt;
+            https://www.wetteronline.at/wetterticker/neuschnee-und-wind-grosse-lawinengefahr-in-den-alpen--a2c479f3-038e-48d8-b527-ec401fae949e
+            &lt;/guid&gt;
+            &lt;enclosure length="1000000" type="image/jpeg" url="https://c02.purpledshub.com/uploads/sites/77/2025/01/20250128_Ticker-Image-632x355-14-1.jpg?fit=463%2C260"/&gt;
+            &lt;/item&gt;
+          </code>
+        </pre>
       </div>
   </body>
 </html>
