--- a/o_projektu.html
+++ b/o_projektu.html
@@ -102,6 +102,7 @@
             &lt;/item&gt;
           </code>
         </pre>
+        <p>Sama web stranica je pisana koristeći Bootstrap framework, koji omogućuje jednostavan i responzivan dizajn web sadržaja koristeći CSS i JavaScript. Hvala što ste pogledali moju web stranicu i moj projekt!</p>
       </div>
   </body>
 </html>
